compiler/testData/diagnostics/testsWithStdLib/hugeUnresolvedKotlinxHtml.kt
class A {
    fun bar() {
        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                }
                                                                                            }
                                                                                        }
                                                                                    }
                                                                                }
                                                                            }
                                                                        }
                                                                    }
                                                                }
                                                            }
                                                        }

                                                    }
                                                }
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}
